Corriger la structure du ZIP pour éviter le double dossier
Le ZIP contient maintenant directement les fichiers de l'intégration au lieu de créer un sous-dossier dreame_vacuum supplémentaire.

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -21,9 +21,9 @@ jobs:
 
       - name: Create ZIP for HACS
         run: |
-          cd custom_components
-          zip -r ../dreame_vacuum.zip dreame_vacuum/
-          cd ..
+          cd custom_components/dreame_vacuum
+          zip -r ../../dreame_vacuum.zip .
+          cd ../..
 
       - name: Create Release
         uses: softprops/action-gh-release@v1
