--- a/.codespellrc
+++ b/.codespellrc
@@ -2,5 +2,5 @@
 # Ref: https://github.com/codespell-project/codespell#using-a-config-file
 skip = .git,.codespellrc,translations,resources.py
 check-hidden = true
-# ignore-regex = 
-ignore-words-list = hass,aline,laF
+# ignore-regex =
+ignore-words-list = hass,aline,laF,chambre,manger,espace
