--- a/.codespellrc
+++ b/.codespellrc
@@ -1,6 +1,12 @@
 [codespell]
-# Ref: https://github.com/codespell-project/codespell#using-a-config-file
-skip = .git,.codespellrc,translations,resources.py
-check-hidden = true
-# ignore-regex =
-ignore-words-list = hass,aline,laF,chambre,manger,espace,projet
+# Skip certain files and directories
+skip = *.js,*.json,*.pyc,.git,.github,__pycache__,*.egg-info,.pytest_cache,.venv,venv,dist,build
+
+# Ignore certain words that are legitimate or technical terms
+ignore-words-list = hass,nd,te,whe,ot,ue,ane,thn,bu,fo,tre,wya,vas,dnd,dout
+
+# Skip files with too many false positives
+skip-paths = custom_components/dreame_vacuum/dreame/resources.py
+
+# Quiet level
+quiet-level = 2
