Ajouter permissions explicites aux workflows pour la sécurité
- Ajouter 'permissions: contents: read' à hassfest.yaml
- Ajouter 'permissions: contents: read' à validate.yaml
- Résout les alertes de sécurité #1 et #2

--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -10,6 +10,8 @@ on:
 jobs:
   validate-hacs:
     runs-on: "ubuntu-latest"
+    permissions:
+      contents: read
     steps:
       - name: Skip HACS validation
         run: echo "HACS validation disabled"
